Requires another scope for API, to read private repos.

--- a/assets/config.js.example
+++ b/assets/config.js.example
@@ -2,7 +2,7 @@ var config = {
 	auth: {
 		client_id: '',
 		client_secret: '',
-		api_scope: 'notifications'
+		api_scope: 'notifications, repo'
 	},
 	db: {
 		server: 'octoserver',
